@@ -1692,6 +1692,7 @@ $wgMessageStructure = array(
 		'immobile_namespace',
 		'imagenocrossnamespace',
 		'imagetypemismatch',
+		'imageinvalidfilename',
 	),
 	'export' => array(
 		'export',
